IGNITE-20360 fix tests